# specs-game

./: Cargo.toml
resources/: LICENSE  map1.tmx
src/: components.rs  main.rs
src/debug/: mod.rs
src/game/: input.rs  map.rs  mod.rs  particles.rs  perf.data
src/game/level/: input.rs  input_handler.rs  mod.rs  physics.rs
src/game/menu/: mod.rs
src/renderer/: font.rs  mod.rs  rect_color.frag  rect_color.vert  shader.rs  shader.vert
src/renderer/shaders/: particle.compute  particle.vert  text.frag  text.vert  texture.frag  texture.vert
src/systems/: mod.rs
