[package]
name = "specs-game"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = '0.16'

[dependencies.sfml]
version = '0.15'
default-features = true

[profile.release]
debug = true
